<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cenario_atual"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_hashrate"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/total_hashrate_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total_hashrate"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensibilidade_da_notificacao"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <SeekBar
        android:id="@+id/seekBar_sens_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:progressTint="@color/colorPrimary"
        android:thumbTint="@color/colorPrimaryDark"
        android:visibility="visible" />

    <Button
        android:id="@+id/button_atualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar" />

</LinearLayout>