<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:layout_margin="5dp">

    <TableRow>

        <TextView
            android:id="@+id/txtAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/account"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </TableRow>

    <TableRow>

    <TextView
            android:id="@+id/txtValueAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"/>
    </TableRow>

    <View android:layout_width="match_parent"
        android:background="@android:color/black"
        android:layout_height="2dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:stretchColumns="1,2">

        <TableRow>


            <TextView
                android:id="@+id/txtHashrate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/btc"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/usd"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat" />

        </TableRow>

        <View android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="2dp" />

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/hora" />

            <TextView
                android:id="@+id/txtBtcHourValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste2" />

            <TextView
                android:id="@+id/txtUsdHourValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste3" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/dia" />

            <TextView
                android:id="@+id/txtBtcDayValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste2" />

            <TextView
                android:id="@+id/txtUsdDayValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste3" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/semana" />

            <TextView
                android:id="@+id/txtBtcWeekValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste2" />

            <TextView
                android:id="@+id/txtUsdWeekValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste3" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:text="@string/mes" />

            <TextView
                android:id="@+id/txtBtcMonthValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste2" />

            <TextView
                android:id="@+id/txtUsdMonthValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:padding="3dp"
                android:text="teste3" />

        </TableRow>
        <View android:layout_width="match_parent"
            android:background="@android:color/black"
            android:layout_height="2dp" />

    </TableLayout>



</TableLayout>