<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:paddingLeft="40dp"
    android:paddingTop="10dp"
    android:paddingRight="8dp">

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="15dp"
        android:text="@string/account"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

    <TextView
        android:id="@+id/accountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12dp"
        android:layout_below="@+id/account"
        android:text="@string/space" />

    <TextView
        android:id="@+id/hashrate"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/accountValue"
        android:text="@string/hashrate"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

    <TextView
        android:id="@+id/hashrateValue"
        android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/balance"
        android:text="@string/space" />

    <TextView
        android:id="@+id/balance"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accountValue"
        android:layout_centerHorizontal="true"
        android:text="@string/balance"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

    <TextView
        android:id="@+id/balanceValue"
        android:textSize="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/balance"
        android:layout_alignStart="@+id/balance"
        android:layout_below="@+id/balance"
        android:text="@string/space" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hashrateValue" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/graph"
        android:background="@android:color/darker_gray"/>

</RelativeLayout>